fix(UI): correct horizontal spacing and hide scrollbar in movie carousel

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,13 @@
     -webkit-backdrop-filter: blur(12px); */
   }
 }
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .hide-scrollbar {
+    -ms-overflow-style: none; /* IE + Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
